--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -11,6 +11,12 @@
   .h1 {
     @apply text-2xl font-extrabold tracking-tight text-gray-900 sm:text-4xl md:text-6xl dark:text-gray-100;
   }
+  .h2 {
+    @apply text-2xl font-bold text-gray-800 dark:text-gray-100
+  }
+  .h3 {
+    @apply text-2xl font-semibold text-gray-700 dark:text-gray-100
+  }
   .p {
     @apply text-sm text-gray-500 dark:text-gray-400 leading-relaxed
   }
