--- a/styles/global.css
+++ b/styles/global.css
@@ -1,4 +1,5 @@
 @import 'tailwindcss';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -9,17 +10,17 @@
   --font-family-sans: 'Inter', sans-serif;
 }
 
-@layer components {
-  .h1 {
+@layer base {
+  h1 {
     @apply text-4xl font-extrabold tracking-tight text-gray-900 sm:text-4xl md:text-6xl dark:text-gray-100;
   }
-  .h2 {
-    @apply text-3xl font-bold text-gray-800 dark:text-gray-100
+  h2 {
+    @apply text-3xl font-bold text-gray-900 dark:text-gray-100
   }
-  .h3 {
-    @apply text-2xl font-semibold text-gray-700 dark:text-gray-100
+  h3 {
+    @apply text-2xl font-semibold text-gray-900 dark:text-gray-100
   }
-  .p {
-    @apply text-sm text-gray-500 dark:text-gray-400 leading-relaxed
+  p {
+    @apply text-sm text-gray-500 dark:text-gray-500 leading-relaxed
   }
 }
