--- a/styles/global.css
+++ b/styles/global.css
@@ -15,7 +15,7 @@
     @apply text-4xl font-extrabold tracking-tight text-gray-900 sm:text-4xl md:text-6xl dark:text-gray-100;
   }
   h2 {
-    @apply text-3xl font-bold text-gray-900 dark:text-gray-100
+    @apply text-3xl font-bold text-justify text-gray-900 dark:text-gray-100
   }
   h3 {
     @apply text-2xl font-semibold text-gray-900 dark:text-gray-100
