--- a/styles/global.css
+++ b/styles/global.css
@@ -11,6 +11,11 @@
   --font-family-sans: 'Inter', sans-serif;
 }
 
+:root {
+  --primary-color: #ba4239;
+  --secondary-color: #e7c13a;
+}
+
 @layer base {
   h1 {
     @apply text-4xl font-extrabold tracking-tight text-gray-900 sm:text-4xl md:text-6xl dark:text-gray-100;
@@ -22,6 +27,9 @@
     @apply text-2xl font-semibold text-gray-900 dark:text-gray-100;
   }
   p {
+    @apply text-sm text-gray-900 dark:text-gray-300 leading-relaxed;
+  }
+  span {
     @apply text-sm text-gray-900 dark:text-gray-300 leading-relaxed;
   }
   ul {
